<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/save_button"
        android:layout_gravity="right"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/add_alarm"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_weight="1.5"/>

   <TimePicker
       android:layout_width="wrap_content"
       android:layout_height="0dp"
       android:layout_marginBottom="25dp"
       android:layout_gravity="center"
       android:layout_weight="3"
       android:id="@+id/time_picker">
   </TimePicker>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/name"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionSend"
            android:hint="@string/enter_name"
            android:id="@+id/add_name"
            android:textSize="20sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/phrase"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionSend"
            android:hint="@string/enter_phrase"
            android:id="@+id/add_phrase"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/repeat"
            android:textSize="20dp"/>

        <com.samiamharris.justdoitclock.MultiSpinner
            android:text="Text"
            android:id="@+id/multi_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/volume"
            android:textSize="20sp"/>

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progress="0"
            android:max="100"
            android:minWidth="150dp"
            android:id="@+id/add_seek_bar"/>


    </LinearLayout>


</LinearLayout>